--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -110,7 +110,7 @@ return \PhpCsFixer\Config::create()
         'non_printable_character' => true, // @Symfony
         'normalize_index_brace' => true, // @Symfony
         'not_operator_with_space' => false,
-        'not_operator_with_successor_space' => true,
+        'not_operator_with_successor_space' => false,
         'object_operator_without_whitespace' => true, // @Symfony
         'ordered_class_elements' => true,
         'ordered_imports' => true,
