--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,11 @@
     <php>
         <ini name="error_reporting" value="-1" />
     </php>
+
+    <logging>
+        <log type="coverage-html" target="build/coverage"/>
+    </logging>
+
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
